--- a/app/src/main/res/layout/activity_examples_library.xml
+++ b/app/src/main/res/layout/activity_examples_library.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.inalivayko.testall.ActivityExamplesLibrary">
+    tools:context=".examples_library.ActivityExamplesLibrary">
 
     <TextView
         android:layout_width="fill_parent"
