--- a/app/src/main/res/layout/activity_examples_library.xml
+++ b/app/src/main/res/layout/activity_examples_library.xml
@@ -18,4 +18,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/butDateCalendar"
+        android:layout_below="@+id/tvExampesLibrary"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="31dp" />
 </RelativeLayout>
