--- a/app/src/main/res/layout/activity_activity_date_calendar.xml
+++ b/app/src/main/res/layout/activity_activity_date_calendar.xml
@@ -9,4 +9,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.inalivayko.testall.examples_library.date_calendar.ActivityDateCalendar">
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/date_calendar"
+        android:id="@+id/tvDateCalendar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/but_test"
+        android:id="@+id/butDateCalendar"
+        android:layout_below="@+id/tvDateCalendar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickTest" />
 </RelativeLayout>
