--- a/app/src/main/res/layout/activity_activity_date_calendar.xml
+++ b/app/src/main/res/layout/activity_activity_date_calendar.xml
@@ -28,4 +28,24 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="onClickTest" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/but_date_from_dialog"
+        android:id="@+id/butGetDateFromDialog"
+        android:layout_below="@+id/tvDateCalendar"
+        android:layout_toRightOf="@+id/butDateCalendar"
+        android:onClick="onClickGetDateFromDialog" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/tvResult"
+        android:layout_below="@+id/butDateCalendar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
