--- a/app/src/main/res/layout/activity_examples_library.xml
+++ b/app/src/main/res/layout/activity_examples_library.xml
@@ -29,4 +29,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="31dp"
         android:onClick="onClickDateCalendar" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/but_database"
+        android:id="@+id/butDatabase"
+        android:layout_below="@+id/tvExamplesLibrary"
+        android:layout_toRightOf="@+id/butDateCalendar"
+        android:layout_marginTop="31dp"
+        android:onClick="onClickDatabase" />
+
 </RelativeLayout>
