--- a/app/src/main/res/layout/activity_purshase.xml
+++ b/app/src/main/res/layout/activity_purshase.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -24,28 +24,9 @@
         android:text="Дата:"
         android:id="@+id/tvDate"
         android:layout_below="@+id/tvID"
-        android:layout_alignTop="@+id/etDate"
-        android:layout_alignBottom="@+id/etDate"
         android:gravity="center"
-        android:textSize="16dp" />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/etDate"
-        android:layout_below="@+id/tvID"
-        android:layout_toRightOf="@+id/tvDate"
-        android:inputType="date"
-        android:width="200dp" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get date"
-        android:id="@+id/butGetDate"
-        android:layout_alignTop="@+id/etDate"
-        android:layout_alignBottom="@+id/etDate"
-        android:layout_below="@+id/tvID"
-        android:layout_toRightOf="@+id/etDate"
-        android:onClick="onClickGetDate" />
+        android:textSize="16dp"
+        android:onClick="onClickSetDate" />
 
     <!-- NAME -->
     <TextView
