--- a/app/src/main/res/layout/activity_purshase.xml
+++ b/app/src/main/res/layout/activity_purshase.xml
@@ -26,7 +26,8 @@
         android:layout_below="@+id/tvID"
         android:gravity="center"
         android:textSize="16dp"
-        android:onClick="onClickSetDate" />
+        android:onClick="onClickSetDate"
+        android:clickable="true" />
 
     <!-- NAME -->
     <TextView
