--- a/app/src/main/res/layout/cashe_list_item.xml
+++ b/app/src/main/res/layout/cashe_list_item.xml
@@ -16,6 +16,12 @@
             android:layout_margin="2dp" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvDate"
+            android:layout_margin="2dp" />
+
+        <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvNomenclature"
