--- a/app/src/main/res/layout/cashe_list_item.xml
+++ b/app/src/main/res/layout/cashe_list_item.xml
@@ -16,11 +16,10 @@
             android:layout_margin="2dp" />
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvNomenclature"
-            android:layout_margin="2dp"
-            android:layout_weight="1" />
+            android:layout_margin="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
