--- a/app/src/main/res/layout/cashe_list_item.xml
+++ b/app/src/main/res/layout/cashe_list_item.xml
@@ -12,22 +12,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvDate"
-            android:layout_margin="2dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvNomenclature"
-            android:layout_margin="2dp" />
+            android:id="@+id/tvDate" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvID"
-            android:layout_margin="2dp" />
+            android:layout_marginLeft="10dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvNomenclature" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -38,19 +36,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvNumber"
-            android:layout_margin="2dp" />
+            android:id="@+id/tvNumber" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvPrice"
-            android:layout_margin="2dp" />
+            android:layout_marginLeft="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvAmount"
-            android:layout_margin="2dp" />
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 </LinearLayout>
