--- a/app/src/main/res/layout/activity_cashe.xml
+++ b/app/src/main/res/layout/activity_cashe.xml
@@ -10,7 +10,7 @@
     tools:context="com.example.inalivayko.testall.cashe.ActivityCashe">
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/but_cashe"
@@ -19,11 +19,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/textView3"
+        android:id="@+id/spOrderType" />
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/spOrderType"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
