--- a/app/src/main/res/layout/activity_cashe.xml
+++ b/app/src/main/res/layout/activity_cashe.xml
@@ -22,7 +22,7 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textView3"
+        android:layout_alignParentRight="true"
         android:id="@+id/spOrderType" />
 
     <LinearLayout
