--- a/app/src/main/res/layout/activity_cashe.xml
+++ b/app/src/main/res/layout/activity_cashe.xml
@@ -19,17 +19,30 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Spinner
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:id="@+id/spOrderType" />
+        android:id="@+id/llParams"
+        android:layout_below="@+id/textView3">
+
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:id="@+id/etWhere"
+            android:inputType="text"/>
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/spOrderType"/>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/spOrderType"
+        android:layout_below="@+id/llParams"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
