--- a/app/src/main/res/layout/activity_cashe.xml
+++ b/app/src/main/res/layout/activity_cashe.xml
@@ -19,12 +19,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/tvPeriod"
+        android:layout_below="@+id/textView3" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/llParams"
-        android:layout_below="@+id/textView3">
+        android:layout_below="@+id/tvPeriod">
 
         <EditText
             android:layout_width="250dp"
